# teleportation

./: .gitignore  README-DEV.md  README-UX.md  README.md  package-lock.json  package.json  teleportal.js
src/example/lightningsky/: index.html  package.json  tsconfig.json
src/example/lightningsky/src/: main.ts  stripe.ts
src/example/lightningsky/src-tauri/: Cargo.toml  tauri.conf.json
src/example/lightningsky/src-tauri/capabilities/: default.json
src/example/lightningsky/src-tauri/src/: lib.rs
src/example/magicsky/: index.html  magicsky.html  package-lock.json  package.json
src/example/magicsky/src/: magicsky.ts  main.ts  stripe.ts
src/example/magicsky/src-tauri/: Cargo.toml  tauri.conf.json
src/example/magicsky/src-tauri/src/: lib.rs  main.rs
src/example/server/: README.md  demo-server.js  example-server.js  headless-browser-teleporter.js  package-lock.json  package.json  teleport-demo.html  teleportation-client-utils.js  test-teleportation.js
src/example/server/ye-olde-appe-shoppe/: app-shoppe-logic.js
src/example/website/books/: index.html
src/example/website/goneshootin/: index.html  package-lock.json  package.json  server.js
src/persistence/: teleportal.js  teleportations.js
src/protocols/: teleportal.protocol.js
src/safe-parsers/javascript/safe-teleportation-parser/: package-lock.json  package.json  teleportation.js  test.js
src/safe-parsers/rust/safe_teleportation_parser/: .Cargo.toml.swp  Cargo.toml
src/safe-parsers/rust/safe_teleportation_parser/src/: lib.rs  structs.rs  tests.rs
src/server/: server.js
src/server/routes/: add-routes.js
test/mocha/: package-lock.json  package.json  safe-parser-with-the-goods.html  safe-parser.html  server.js  test-server.js
(+5 files in other folders)
