[package]
name = "lightningsky"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lightningsky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
sessionless = "0.1.1"

[dependencies.safe_teleportation_parser]
path = "../../../safe-parsers/rust/safe_teleportation_parser"

[dependencies.fount-rs]
path = "../../../../../fount/src/client/rust/fount-rs"

[dependencies.bdo-rs]
path = "../../../../../bdo/src/client/rust/bdo-rs"

[dependencies.addie-rs]
path = "../../../../../addie/src/client/rust/addie-rs"

[dependencies.sanora-rs]
path = "../../../../../sanora-dot-club/src/client/rust/sanora-rs"


