[package]
name = "safe_teleportation_parser"
version = "0.0.1"
edition = "2021"

[dependencies]
sessionless = "0.1.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
regex = "1.5"
actix-rt = "*"
